--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,4 +10,22 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-</LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/homeFrameLayout"
+        android:layout_above="@+id/homeBottomNav"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/homeBottomNav"
+        app:menu="@menu/menu_home_bottom_nav_bar"
+        android:background="#B5DDDF"
+        app:itemTextColor="#3C47B3"
+        app:itemIconTint="#3C47B3"
+        app:itemIconSize="30sp"
+        android:layout_alignParentBottom="true"
+        app:itemPaddingBottom="5sp" />
+
+</RelativeLayout>
