--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,258 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:src="@drawable/icon_profile"
+                    android:layout_gravity="center_horizontal" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_name"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Name"
+                        android:inputType="textPersonName"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp"
+                    android:layout_marginTop="10sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileMobileNo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_mobile_no"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Mobile No"
+                        android:inputType="numberDecimal"
+                        android:maxLength="10"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp"
+                    android:layout_marginTop="10sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileEmailId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_email"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Email ID"
+                        android:inputType="textEmailAddress"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp"
+                    android:layout_marginTop="10sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileGender"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_gender"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Gender"
+                        android:inputType="text"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp"
+                    android:layout_marginTop="10sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileAge"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_age"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Age"
+                        android:inputType="numberDecimal"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp"
+                    android:layout_marginTop="10sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_address"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Address"
+                        android:inputType="text"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:boxStrokeWidth="2sp"
+                    android:layout_marginTop="10sp" >
+
+                    <EditText
+                        android:id="@+id/etProfileUsername"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/icon_username"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Username"
+                        android:inputType="text"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
+                    android:layout_marginTop="10sp"
+                    app:boxStrokeColor="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="#80000000"
+                    app:passwordToggleDrawable="@drawable/password_toggle"
+                    app:boxStrokeWidth="2sp" >
+
+                    <EditText
+                        android:id="@+id/etProfilePassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/icon_password"
+                        android:drawablePadding="8sp"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:paddingLeft="10sp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnRegisterRegister"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginTop="20sp"
+                    android:layout_marginRight="16sp"
+                    android:background="@drawable/background_btn_bg"
+                    android:fontFamily="@font/aldrich"
+                    android:text="Register"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="20sp"/>
+
+            </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
