--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:weightSum="100">
 
     <FrameLayout
         android:layout_width="match_parent"
