--- a/app/src/main/res/menu/menu_home_bottom_nav_bar.xml
+++ b/app/src/main/res/menu/menu_home_bottom_nav_bar.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/menuBottomNavSearch"
-        android:title="Search"
+        android:title="Categories"
         android:icon="@drawable/icon_search" />
 
     <item
