--- a/app/src/main/res/layout/lv_get_all_category.xml
+++ b/app/src/main/res/layout/lv_get_all_category.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="185dp"
+        android:layout_width="185sp"
         android:layout_height="150sp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="16sp"
