--- a/app/src/main/res/layout/lv_get_all_category.xml
+++ b/app/src/main/res/layout/lv_get_all_category.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:background="@color/white" >
 
     <LinearLayout
@@ -19,8 +19,7 @@
         app:cardCornerRadius="16sp"
         app:cardElevation="10dp"
         android:layout_marginTop="20sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="5sp">
+        android:layout_marginEnd="5sp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,9 +46,18 @@
                 android:textStyle="bold"
                 android:fontFamily="@font/aldrich" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
 
     </LinearLayout>
 
