--- a/app/src/main/res/layout/lv_get_all_category.xml
+++ b/app/src/main/res/layout/lv_get_all_category.xml
@@ -4,13 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="@color/white" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="185sp"
@@ -46,19 +41,8 @@
                 android:textStyle="bold"
                 android:fontFamily="@font/aldrich" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-
-
-    </LinearLayout>
 
 </LinearLayout>
