--- a/app/src/main/res/layout/lv_get_all_category.xml
+++ b/app/src/main/res/layout/lv_get_all_category.xml
@@ -3,17 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white" >
 
     <androidx.cardview.widget.CardView
-        android:layout_width="185sp"
+        android:layout_width="160sp"
         android:layout_height="150sp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="16sp"
+        app:cardBackgroundColor="#E6FFFFFF"
+        app:cardCornerRadius="12sp"
         app:cardElevation="10dp"
-        android:layout_marginTop="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10sp"
         android:layout_marginEnd="5sp">
 
         <LinearLayout
